# stock_analysis

./: .gitignore  CLAUDE.md
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
ads/british-airways/: index.html
comprehensive_stock_analysis/: .flake8  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
comprehensive_stock_analysis/.claude/: launch.json  settings.json
comprehensive_stock_analysis/.claude/agents/: codebase-architect.md  python-code-reviewer.md
comprehensive_stock_analysis/docs/: DESIGN.md  FREE_APIS.md  FREE_API_MIGRATION.md  MODERN_ARCHITECTURE.md  PHASES.md
comprehensive_stock_analysis/examples/: basic_analysis.py  free_api_example.py  modern_analysis.py
comprehensive_stock_analysis/scripts/: finish_report.py
comprehensive_stock_analysis/src/stock_analysis/: __init__.py  llm_budget.py  main.py  symbols.py  token_meter.py
comprehensive_stock_analysis/src/stock_analysis/agents/: __init__.py  base_agent.py  competitor_analyst_agent.py  data_collector_agent.py  economic_analyst_agent.py  fundamental_analyst_agent.py  industry_analyst_agent.py  investment_advisor_agent.py  market_analyst_agent.py  report_generator_agent.py  risk_analyst_agent.py  sentiment_analyst_agent.py  technical_analyst_agent.py
comprehensive_stock_analysis/src/stock_analysis/config/: __init__.py  agents.yaml  flow_tasks.yaml  flows.yaml  llm_config.yaml  llm_config.yaml.bak  loader.py  settings.py  tasks.yaml
comprehensive_stock_analysis/src/stock_analysis/crew/: __init__.py  event_listener.py  flow_crew.py  modern_crew.py  stock_analysis_crew.py
comprehensive_stock_analysis/src/stock_analysis/models/: __init__.py  stock_data.py
comprehensive_stock_analysis/src/stock_analysis/tasks/: task_factory.py
comprehensive_stock_analysis/src/stock_analysis/tools/: __init__.py  _http.py  _indicators.py  _svg_charts.py  analysis_tools.py  backtest_tools.py  cache.py  calculation_tools.py  company_intel.py  data_collection.py  free_data_collection.py  portfolio_tools.py  report_tools.py  social_sentiment.py  yf_summaries.py
comprehensive_stock_analysis/src/stock_analysis/web/: __init__.py  __main__.py  _paths.py  alerts.py  app.py  db.py  jobs.py  progress.py  reports_index.py  schemas.py
comprehensive_stock_analysis/src/stock_analysis/web/routes/: __init__.py  alerts.py  analyze.py  history.py  portfolio.py  results.py  watchlist.py
comprehensive_stock_analysis/src/stock_analysis/web/static/css/: app.css
comprehensive_stock_analysis/src/stock_analysis/web/static/js/: alerts.js  analyze.js  app.js  dashboard.js  history.js  util.js  watchlist.js
comprehensive_stock_analysis/src/stock_analysis/web/templates/: index.html
comprehensive_stock_analysis/tests/: __init__.py  conftest.py  test_backtest_tools.py  test_cache.py  test_crewai_features.py  test_flow_crew.py  test_flow_tasks_config.py  test_free_data_collection.py  test_llm_budget.py  test_log_hygiene.py  test_observability.py  test_output_paths.py  test_report_tools.py  test_social_sentiment.py  test_stock_analysis.py  test_svg_charts.py  test_web_db.py  test_web_diff_alerts.py  test_web_history.py  test_web_jobs.py  test_web_portfolio_watchlist.py  test_web_rec_history.py  test_web_results.py  test_web_validation.py  test_yf_summaries.py
