[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comprehensive-stock-analysis"
version = "0.1.0"
description = "A production-ready multi-agent stock analysis solution built on CrewAI 1.x with Flow-based orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Stock Analysis Team", email = "team@stockanalysis.com"},
]
keywords = ["stock", "analysis", "finance", "crewai", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Agent framework
    "crewai==1.14.5",  # 1.14.6+ needs lancedb>=0.29 (no build for this platform)
    "crewai-tools>=0.8.0",
    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    # Data — free sources only
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "feedparser>=6.0.0",
    # Configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Statistics (trend regression in analysis tools)
    "scipy>=1.11.0",
    # Report generation
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pymdown-extensions>=10.0",
    # Search-interest sentiment (Google Trends, best-effort)
    "pytrends>=4.9.0",
    # Caching (optional — degrades gracefully without Redis)
    "redis>=5.0.0",
    # Local web UI (FastAPI backend + no-build frontend)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.urls]
Homepage = "https://github.com/stock-analysis/comprehensive-stock-analysis"
Documentation = "https://comprehensive-stock-analysis.readthedocs.io"
Repository = "https://github.com/stock-analysis/comprehensive-stock-analysis.git"
Issues = "https://github.com/stock-analysis/comprehensive-stock-analysis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analysis"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["stock_analysis"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/stock_analysis",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/stock_analysis"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
